<resources>
    <string name="app_name">mHealth</string>
    <string name="title_home">Home</string>
    <string name="title_heart">Heart</string>
    <string name="title_steps">Steps</string>
    <string name="title_calories">Calories</string>
    <string name="title_sleep">Sleep</string>
    <string name="title_activity_bottom_tab">BottomTabActivity</string>

    <string name="tile_health">Health Plan</string>
    <string name="tile_heart_rate">Heart Rate</string>
    <string name="tile_steps">Steps Taken</string>
    <string name="tile_calories">Calories Burned</string>
    <string name="tile_sleep">Sleep</string>

    <string name="average">Average: </string>
    <string name="minimum">Minimum: </string>
    <string name="maximum">Maximum: </string>

    <string name="progress_steps">6000 Steps</string>
    <string name="progress_calories">260 kCal</string>
    <string name="progress_sleep">7 hours 30 minutes</string>
</resources>
