<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/steps_Chart"
            android:layout_width="match_parent"
            android:layout_height="250dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="22sp"
                    android:text="@string/average"/>
                <TextView
                    android:id="@+id/average_Steps"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="22sp"
                    android:text=""
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="22sp"
                    android:text="@string/minimum"/>
                <TextView
                    android:id="@+id/min_Steps"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="22sp"
                    android:text=""
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="22sp"
                    android:text="@string/maximum"/>
                <TextView
                    android:id="@+id/max_Steps"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="22sp"
                    android:text=""
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>