<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:id="@+id/home_Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:background="#9E9E9E">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FAFAFA"
            android:layout_marginBottom="0.5dp"
            android:paddingTop="7dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/tile_health"
                android:textSize="20sp"
                android:layout_marginBottom="0dp"/>

            <ImageView
                android:layout_width="88dp"
                android:layout_height="110dp"
                android:scaleType="fitXY"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/tile_health" />
            <TextView
                android:id="@+id/health_Rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=""
                android:layout_marginTop="0dp"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/health_Recommendation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=""
                android:layout_marginTop="0dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FAFAFA"
                android:layout_marginTop="0.5dp"
                android:layout_marginBottom="0.5dp"
                android:layout_marginRight="0.5dp"
                android:layout_marginEnd="0.5dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="15sp"
                    android:text="@string/tile_heart_rate" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="12.5dp"
                    android:layout_marginBottom="12.5dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/tile_heart" />
                <TextView
                    android:id="@+id/tile_Heartrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FAFAFA"
                android:layout_marginTop="0.5dp"
                android:layout_marginBottom="0.5dp"
                android:layout_marginLeft="0.5dp"
                android:layout_marginStart="0.5dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="15sp"
                    android:text="@string/tile_steps" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="12.5dp"
                    android:layout_marginBottom="12.5dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/tile_steps" />
                <TextView
                    android:id="@+id/tile_StepsTaken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FAFAFA"
                android:layout_marginTop="0.5dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="0.5dp"
                android:layout_marginEnd="0.5dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="15sp"
                    android:text="@string/tile_calories" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="12.5dp"
                    android:layout_marginBottom="12.5dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/tile_calories" />
                <TextView
                    android:id="@+id/tile_CaloriesBurned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FAFAFA"
                android:layout_marginTop="0.5dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="0.5dp"
                android:layout_marginStart="0.5dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="15sp"
                    android:text="@string/title_sleep" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="12.5dp"
                    android:layout_marginBottom="12.5dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/tile_sleep" />
                <TextView
                    android:id="@+id/tile_Sleep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>